--- a/hw2/index.html
+++ b/hw2/index.html
@@ -29,115 +29,115 @@
     //     <!-- - Дано змінну time яка рівна числу від 0 до 59. Потрібно написати код, який перевірить, до якої четверті години попадає число-->
     // <!--(в першу, другу, третю или четверту частину години).-->
 
-    // let time = +prompt("Введіть час 1-59");
-    // if (time<=15 && time>=1)
-    // {
-    //     console.log('Перша частина');
-    // }
-    // else if(time<=30 && time>15)
-    // {
-    //     console.log('Друга частина');
-    // }
-    // else if(time<=45 && time>30)
-    // {
-    //     console.log('Третя частина');
-    // }
-    // else if(time<=60 && time>45)
-    // {
-    //     console.log('Четверта частина');
-    // }
-    // else if(time<1 || time>60)
-    // {
-    //     console.log('Неправильно вказано час!');
-    // }
+    let time = +prompt("Введіть час 1-59");
+    if (time<=15 && time>=1)
+    {
+        console.log('Перша частина');
+    }
+    else if(time<=30 && time>15)
+    {
+        console.log('Друга частина');
+    }
+    else if(time<=45 && time>30)
+    {
+        console.log('Третя частина');
+    }
+    else if(time<=60 && time>45)
+    {
+        console.log('Четверта частина');
+    }
+    else if(time<1 || time>60)
+    {
+        console.log('Неправильно вказано час!');
+    }
 
 
     // <!-- - У змінній day дано якесь число від 1 до 31. Потрібно визначити, у яку половину(декаду) місяця потрапляє це число (у першу, другу чи третю).-->
 
-    // let day = +prompt("Введіть день 1-31");
-    // if (day<=11 && day>=1)
-    // {
-    //     console.log('Перша декада');
-    // }
-    // else if(day<=20 && day>11)
-    // {
-    //     console.log('Друга декада');
-    // }
-    // else if(day<=31 && day>20)
-    // {
-    //     console.log('Третя декада');
-    // }
-    //
-    // else if(day<1 || day>31)
-    // {
-    //     console.log('Неправильно вказано день!');
-    // }
+    let day = +prompt("Введіть день 1-31");
+    if (day<=11 && day>=1)
+    {
+        console.log('Перша декада');
+    }
+    else if(day<=20 && day>11)
+    {
+        console.log('Друга декада');
+    }
+    else if(day<=31 && day>20)
+    {
+        console.log('Третя декада');
+    }
+
+    else if(day<1 || day>31)
+    {
+        console.log('Неправильно вказано день!');
+    }
 
 
     // <!-- - У нас є змінна test, якщо дорівнює true, виведіть 'Вірно', інакше виведіть 'Неправильно'.-->
     // <!--Перевірте роботу скрипта при test, що дорівнює true, false. Напишіть два варіанти скрипта - з коротким записом(тернаркою)-->
 
-    // let test = prompt("true or false?");
-    // if (test === "true") {
-    //     console.log("Вірно!");
-    // } else if (test === "false") {
-    //     console.log("Неправильно!");
-    // }
-    //
-    // (test === "true") ? console.log("Вірно!") : console.log("Неправильно!")
+    let test = prompt("true or false?");
+    if (test === "true") {
+        console.log("Вірно!");
+    } else if (test === "false") {
+        console.log("Неправильно!");
+    }
+
+    (test === "true") ? console.log("Вірно!") : console.log("Неправильно!")
 
     // <!-- - Якщо змінна a не дорівнює нулю, виведіть 'Вірно', інакше виведіть 'Невірно'. Перевірте  скрипт при a, що дорівнює 1, 0, -3-->
 
-    // let a = +prompt("Введіть 1, 0, або -3:");
-    // if (a!==0){
-    //     console.log("Вірно!")
-    // }
-    // else {
-    //     console.log("Невірно!")
-    // }
-    // (a !== 0) ? console.log("Вірно!") : console.log("Невірно!");
+    let a = +prompt("Введіть 1, 0, або -3:");
+    if (a!==0){
+        console.log("Вірно!")
+    }
+    else {
+        console.log("Невірно!")
+    }
+    (a !== 0) ? console.log("Вірно!") : console.log("Невірно!");
 
 
     // <!-- - Скласти розклад на тиждень за домопоги switch. Користувач вводить порядковий номер дня тижня і на екрані відображається інфа що заплановано на цей день.--
 
-   // let days = +prompt("Введіть номер дня 1-7");
-   // switch (days) {
-   //     case 1:
-   //         console.log("Понеділок: купити продукти")
-   //         break;
-   //     case 2:
-   //         console.log("Вівторок: забрати посилку")
-   //         break;
-   //     case 3:
-   //         console.log("Середа: сходити в спортзал")
-   //         break;
-   //     case 4:
-   //         console.log("Четвер: зробити проект")
-   //         break;
-   //     case 5:
-   //         console.log("П’ятниця: купити пиво")
-   //         break;
-   //     case 6:
-   //         console.log("Субота: прибирання в квартирі")
-   //         break;
-   //     case 7:
-   //         console.log("Неділя: скласти план на наступний тиждень")
-   //         break;
-   //     default:
-   //             console.log("Неправильно ввели номер!")
-   //             break;
-   // }
+   let days = +prompt("Введіть номер дня 1-7");
+   switch (days) {
+       case 1:
+           console.log("Понеділок: купити продукти")
+           break;
+       case 2:
+           console.log("Вівторок: забрати посилку")
+           break;
+       case 3:
+           console.log("Середа: сходити в спортзал")
+           break;
+       case 4:
+           console.log("Четвер: зробити проект")
+           break;
+       case 5:
+           console.log("П’ятниця: купити пиво")
+           break;
+       case 6:
+           console.log("Субота: прибирання в квартирі")
+           break;
+       case 7:
+           console.log("Неділя: скласти план на наступний тиждень")
+           break;
+       default:
+               console.log("Неправильно ввели номер!")
+               break;
+   }
 
     // <!-- - Потрібно визначити Високосний рік чи ні. Високосні роки діляться націло на 4.-->
 
-    // let year = prompt("Скільки днів в цьому році?");
-    // if (year % 4 === 0)
-    // {
-    //     console.log("Цей рік високосний");
-    // }
-    // else{
-    //     console.log("Цей рік не високосний");
-    // }
+    let year = prompt("Скільки днів в цьому році?");
+    if (year % 4 === 0)
+    {
+        console.log("Цей рік високосний");
+    }
+    else{
+        console.log("Цей рік не високосний");
+    }
 
 
     // <!-- - Використовуючи конструкцію if..else, напишіть код, який запитуватиме: „Яка «офіційна» назва JavaScript?“-->
