--- a/hw2/index.html
+++ b/hw2/index.html
@@ -130,7 +130,7 @@
 
     // <!-- - Потрібно визначити Високосний рік чи ні. Високосні роки діляться націло на 4.-->
 
-    let year = prompt("Скільки днів в цьому році?");
+    let year = +prompt("Скільки днів в цьому році?");
     if (year % 4 === 0)
     {
         console.log("Цей рік високосний");
